<resources>
    <string name="app_name">Practica_05</string>
    <string name="msg_tituloMain">Configurador de Pedidos</string>
    <string name="msg_btnNuevoPedido">Nuevo Pedido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblTituloSelectComida">Selecciona tu comida:</string>
    <string name="msg_pizza">Pizza - $12.00</string>
    <string name="msg_hamburguesa">Hamburguesa - $10.00</string>
    <string name="msg_ensalada">Ensalada - $8.00</string>
    <string name="msg_siguiente">Siguiente</string>
    <string name="msg_tituloExtras">Selecciona tus extras:</string>
    <string name="msg_bebidas">Bebida - $2.00</string>
    <string name="msg_papas">Papas Fritas - $3.00</string>
    <string name="msg_postre">Postre - $4.00</string>
    <string name="msg_tituloResumen">Resumen de tu Pedido</string>
    <string name="lblExtras">Extras:</string>
    <string name="msg_confirmarPedido">Confirmar Pedido</string>
    <string name="msg_editarPedido">Editar Pedido</string>
    <string name="msg_total">Total: $0.00</string>
</resources>