<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".SeleccionExtrasFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/msg_tituloExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_tituloExtras"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBebida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBebida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/msg_bebidas"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkPapas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_tituloExtra"
        />

    <CheckBox
        android:id="@+id/checkPapas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/msg_papas"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkPostre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBebida"
        />

    <CheckBox
        android:id="@+id/checkPostre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/msg_postre"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguienteExtras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkPapas"
        />

    <Button
        android:id="@+id/btnSiguienteExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_siguiente"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>